--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bl": "^6.0.2",
     "bluebird": "^3.7.2",
+    "crc": "^4.3.2",
     "duplexer2": "^0.1.4",
     "human-size": "^1.1.0",
     "hyperquest": "^2.1.3",
