--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "human-size": "^1.1.0",
     "hyperquest": "^2.1.3",
     "loner": "^1.0.0",
+    "mkdirp": "^3.0.1",
     "once": "^1.4.0",
     "picomatch": "^2.3.1",
     "pull-defer": "^0.2.3",
@@ -31,6 +32,7 @@
     "rc": "^1.2.8",
     "request": "^2.88.2",
     "stream-to-pull-stream": "^1.7.3",
+    "tmp-promise": "^3.0.3",
     "unzipper": "git+https://github.com/regular/node-unzipper-fileperms.git"
   }
 }
